--- a/ScreenGrab.csproj
+++ b/ScreenGrab.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <PackageReference Include="Sdcb.PaddleInference.runtime.win64.mkl" Version="3.1.0.54" />
     <PackageReference Include="Sdcb.PaddleOCR" Version="3.0.1" />
+    <PackageReference Include="Sdcb.PaddleOCR.Models.Local" Version="3.0.1" />
     <PackageReference Include="Sdcb.PaddleOCR.Models.LocalV5" Version="3.0.0" />
   </ItemGroup>
 
